Rename odbc drivers

--- a/config/odbc/odbcinst.ini
+++ b/config/odbc/odbcinst.ini
@@ -1,14 +1,14 @@
-[MySQL ODBC 8.0 Unicode Driver]
+[MYSQL UNICODE]
 Driver=/usr/lib/x86_64-linux-gnu/odbc/libmyodbc8w.so
 SETUP=/usr/lib/x86_64-linux-gnu/odbc/libmyodbc8S.so
 UsageCount=1
 
-[MySQL ODBC 8.0 ANSI Driver]
+[MYSQL ANSI]
 Driver=/usr/lib/x86_64-linux-gnu/odbc/libmyodbc8a.so
 SETUP=/usr/lib/x86_64-linux-gnu/odbc/libmyodbc8S.so
 UsageCount=1
 
-[Oracle 19 ODBC driver]
+[ORACLE]
 Description=Oracle ODBC driver for Oracle 19
 Driver=//libsqora.so.19.1
 Setup=
@@ -16,7 +16,7 @@ FileUsage=
 CPTimeout=
 CPReuse=
 
-[ODBC Driver 17 for SQL Server]
+[MSSQL]
 Description=Microsoft ODBC Driver 17 for SQL Server
 Driver=/opt/microsoft/msodbcsql17/lib64/libmsodbcsql-17.8.so.1.1
 UsageCount=1
@@ -24,5 +24,5 @@ UsageCount=1
 [ODBC Drivers]
 Simba = Installed
 
-[Simba Spark ODBC Driver 64-bit]
+[SIMBA]
 Driver = /opt/simba/spark/lib/64/libsparkodbc_sb64.so
